@startuml

title Diagrama de Classes - Projeto BeyCell (Final)
skinparam classAttributeIconSize 0
skinparam linetype ortho

' --- PACOTE MODEL ---
package "br.com.loja.model" {
    class Celular implements Serializable {
        - int id
        - String marca
        - String modelo
        - double preco
        - int ram
        - int armazenamento
        - String cor
        - int quantidadeEstoque
        - int estoqueMinimo
        + Celular()
        + toString() : String
    }

    class Cliente implements Serializable {
        - String cpf
        - String nome
        - String telefone
        - String endereco
        + Cliente()
        + toString() : String
    }

    class Venda implements Serializable {
        - int id
        - LocalDateTime dataHora
        - double valorTotal
        + Venda()
        + toString() : String
    }
}

' --- PACOTE DAO ---
package "br.com.loja.dao" {
    class Persistencia {
        + salvarArquivo(List<?>, String) : void
        + carregarArquivo(String) : List<Object>
    }
}

' --- PACOTE SERVICE ---
package "br.com.loja.service" {
    class CelularService {
        - List<Celular> celulares
        + cadastrar(Celular) : void
        + remover(int) : void
        + adicionarEstoque(int, int) : void
        + baixarEstoque(int) : void
        + buscarEstoqueCritico() : List<Celular>
    }

    class ClienteService {
        - List<Cliente> clientes
        + cadastrar(Cliente) : void
        + remover(String) : void
        + listarTodos() : List<Cliente>
    }

    class VendaService {
        - List<Venda> vendas
        + registrarVenda(Venda) : void
        - gerarFaturaTxt(Venda) : void
        + getTotalVendido() : double
        + getTicketMedio() : double
        + getProdutoMaisVendido() : String
    }
}

' --- PACOTE VIEW ---
package "br.com.loja.view" {
    class MenuPrincipal extends JFrame {
        - CardLayout cardLayout
        - JPanel mainPanel
        + main(String[]) : void
        - criarPainelMenu() : JPanel
    }

    class TelaCelular extends JPanel {
        + TelaCelular(ActionListener)
        - atualizarTabela() : void
    }

    class TelaCliente extends JPanel {
        + TelaCliente(ActionListener)
        - atualizarTabela() : void
    }

    class TelaVenda extends JPanel {
        - List<Celular> carrinho
        - double totalVenda
        + TelaVenda(ActionListener)
        + atualizarDados() : void
    }

    class TelaRelatorios extends JPanel {
        + TelaRelatorios(ActionListener)
        + carregarRelatorio() : void
    }
}

' --- RELACIONAMENTOS ---

' Models dentro de Venda
Venda "1" *-- "1" Cliente : possui >
Venda "1" o-- "*" Celular : contem itens >

' Services usam Persistencia
CelularService ..> Persistencia : usa
ClienteService ..> Persistencia : usa
VendaService ..> Persistencia : usa

' Services gerenciam Models
CelularService "1" o-- "*" Celular : lista
ClienteService "1" o-- "*" Cliente : lista
VendaService "1" o-- "*" Venda : lista

' View principal contem os Paineis (Composição)
MenuPrincipal *-- TelaCelular : contem >
MenuPrincipal *-- TelaCliente : contem >
MenuPrincipal *-- TelaVenda : contem >
MenuPrincipal *-- TelaRelatorios : contem >

' Paineis usam os Services
TelaCelular --> CelularService
TelaCliente --> ClienteService
TelaVenda --> VendaService
TelaVenda --> CelularService
TelaVenda --> ClienteService
TelaRelatorios --> VendaService

@enduml